--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "fastify-mysql": "^2.2.0",
+    "mysql2": "^3.4.0",
     "next": "^13.4.7",
     "postcss": "8.4.24",
     "react": "^18.2.0",
