--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fastify/nextjs": "^10.0.0",
     "fastify": "^4.18.0",
+    "mysql2": "^3.4.0",
     "next": "^12.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
