--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
+    "@types/react": "18.2.14",
     "dotenv": "^16.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7"
