--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@fastify/nextjs": "^10.0.0",
+    "app-root-path": "^3.1.0",
     "fastify": "^4.18.0",
     "mysql2": "^3.4.2",
     "next": "^12.3.4",
